--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.1",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^24.0.18",
+    "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.5",
+    "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "nodemon": "^1.19.2",
+    "prisma-client-lib": "^1.34.8",
     "rimraf": "^3.0.0",
+    "supertest": "^4.0.2",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
@@ -28,5 +35,11 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "^3.6.3"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "morgan": "^1.9.1"
   }
 }
