--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,13 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-      "module": "commonjs",
-      "outDir": "dist",
-      "sourceMap": false,
-      "allowSyntheticDefaultImports": true,
-      "baseUrl": ".",
-      "paths": {
-        "*": [
-          "node_modules/",
-        ],
-        "typings/*": [
-          "src/typings/*"
-        ]
-      },
-    },
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "src/test/**/*.spec.ts"
-    ]
-  }
+  "compilerOptions": {
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "pretty": true,
+    "sourceMap": true,
+    "target": "es6",
+    "outDir": "./dist",
+    "baseUrl": "./"
+ },
+  "exclude": ["node_modules"],
+  "include": ["*.ts"]
+ }
