--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}' --fix --format verbose",
-    "dev": "nodemon --exec ts-node src/index.ts --watch src",
+    "dev": "nodemon --exec ts-node src/server.ts --watch src",
     "test": "jest --watch",
     "coverage": "jest --coverage"
   },
@@ -37,9 +37,12 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "morgan": "^1.9.1"
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "prettier": "^1.18.2"
   }
 }
